[package]
name = "FrozenVPN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
byte-pool = "0.2.4"
tokio = { version = "1.29.1", features = ["full"] }
quinn = "0.10.1"
anyhow = "1.0.71"
libc = "0.2.147"
